@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.8 =
 -------------------------------------------------
+* Added: Shortcode "course_list" has new attribute "categories" to filter courses by course categories.
 
 = 2.0.7 =
 -------------------------------------------------
